Issue #SB-15624 - UI alignments issue fixes, rtl fix

--- a/src/app/client/projects/desktop/src/app/modules/offline/components/offline-help-videos/offline-help-videos.component.scss
+++ b/src/app/client/projects/desktop/src/app/modules/offline/components/offline-help-videos/offline-help-videos.component.scss
@@ -22,7 +22,6 @@
   
       &__tools {
         cursor: pointer;
-        padding: 8px 16px;
       }
   
     }
